* make rows on whiteboard are collapsable * bug fixing
git-svn-id: http://tracplugin.itteco.com/svn/trunk@20 7a303b46-347f-4bab-8b20-7d2844dc3dc5

--- a/itteco/htdocs/css/common.css
+++ b/itteco/htdocs/css/common.css
@@ -195,7 +195,11 @@ table.whiteboard_table tbody tr.odd td {
 	color: #56562b;
 	
 }
-
+.tiny_widget{
+    float: left;
+    width: 50px !IMPORTANT;
+    padding: 3px;
+}
 
 .widget .summary {
 	
